--- a/index.html
+++ b/index.html
@@ -1,1 +1,110 @@
 
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>La Cantina des Cayo</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <a id="top"></a>
+  <div class="parchment-container">
+    <header>
+      <h1>La Cantina des Cayo</h1>
+      <p>Le cœur gourmand de l'île</p>
+    </header>
+
+    <nav>
+      <a href="#top">Accueil</a>
+      <a href="#services">Services</a>
+      <a href="#valeurs">Valeurs</a>
+      <a href="#contact">Contact</a>
+    </nav>
+
+    <div class="hero" style="background-image: url('cantina-banner.jpg'); text-align:center;">
+      <h2 id="devise">On régale, on rassemble, on partage</h2>
+    </div>
+
+    <div class="content">
+      <h3 id="about">À propos</h3>
+      <p>
+        Nichée entre les palmiers et la place du marché de Cayo Perico, <strong>La Cantina des Cayo</strong> est bien plus qu'un simple restaurant. C'est un lieu de vie, de rencontres et de traditions où tous les habitants, voyageurs et travailleurs de l’île aiment venir se retrouver autour d’un bon plat.
+      </p>
+
+      <h3 id="services">Nos services</h3>
+      <ul>
+        <li>Plats traditionnels et spécialités locales</li>
+        <li>Buffets sur demande pour événements</li>
+        <li>Livraison sur toute l’île</li>
+      </ul>
+
+      <h3 id="vision">Notre vision</h3>
+      <p>
+        Faire de la Cantina un lieu chaleureux où se mêlent convivialité, découverte culinaire, et entraide entre les habitants. Chaque repas est une fête, chaque client un invité d’honneur.
+      </p>
+    </div>
+
+    <div class="valeurs" id="valeurs">
+      <h3>Valeurs fondamentales</h3>
+      <ul>
+        <li>
+          <strong>1. Accueil chaleureux</strong><br>
+          Chaque personne qui pousse la porte de la Cantina est reçue comme un ami, avec le sourire et la bonne humeur.
+        </li>
+        <li>
+          <strong>2. Respect des saveurs et des personnes</strong><br>
+          De la cuisine à la salle, nous respectons les produits, les recettes ancestrales et surtout chaque convive.
+        </li>
+        <li>
+          <strong>3. Partage et solidarité</strong><br>
+          La Cantina, c’est aussi un lieu d’entraide. On y partage plus que des repas : des histoires, des moments, des coups de main.
+        </li>
+        <li>
+          <strong>4. Fierté locale</strong><br>
+          Nous mettons à l’honneur les produits de Cayo Perico et la richesse de ses cultures.
+        </li>
+        <li>
+          <strong>5. Adaptabilité et créativité</strong><br>
+          Notre carte évolue au fil des saisons et des envies, pour surprendre et satisfaire tous les gourmands.
+        </li>
+        <li>
+          <strong>6. Discrétion et confidentialité</strong><br>
+          Ce qui se dit à la table de la Cantina reste à la Cantina. Ici, chacun trouve un espace de confiance.
+        </li>
+      </ul>
+    </div>
+
+    <div class="motivation">
+      <h3>Motivation</h3>
+      <p>Madame, Monsieur,</p>
+      <p>
+        C’est avec enthousiasme et passion que je vous présente ma candidature pour la gestion de <strong>La Cantina des Cayo</strong>. En tant qu’habitant de longue date de l’île, j’ai toujours vu en ce lieu un symbole d’unité et de partage. Ma vision : perpétuer cet esprit, innover dans la cuisine tout en respectant la tradition, et créer des souvenirs gustatifs inoubliables pour tous. Je souhaite offrir aux habitants et visiteurs de Cayo Perico un endroit où l’on se sent chez soi, où chaque repas devient un moment festif et fédérateur. <br>
+        Je suis prêt à m’investir pleinement pour faire rayonner la Cantina et la porter à la hauteur de vos espérances.<br>
+      </p>
+      <p>
+        Dans l’attente d’un échange, je vous prie d’agréer l’expression de ma considération la plus gourmande.
+      </p>
+      <p>
+        Respectueusement,<br>
+        Lucien Vox<br>
+        Cuisinier-passionné & ambassadeur de la convivialité à Cayo Perico
+      </p>
+    </div>
+
+    <!-- Section Contact -->
+    <div class="contact-section" id="contact">
+      <h3>Contact</h3>
+      <p>Numéro de téléphone : (520)111-3392</p>
+    </div>
+
+    <div class="bottom-home-btn">
+      <a href="#top">Accueil</a>
+    </div>
+
+    <footer>
+      &copy; 2025 La Cantina des Cayo - Cayo Perico RP. Tous droits réservés.
+    </footer>
+  </div>
+  <script src="main.js"></script>
+</body>
+</html>
